--- a/heroes/templates/heroes/hero_detail.html
+++ b/heroes/templates/heroes/hero_detail.html
@@ -3,12 +3,57 @@
 
 {% block content %}
 
-<h1>Hero - {{ hero.name }}</h1>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">{{ object }}</h1>
+    <a class="p-2 btn btn-outline-primary" href="/heroes/{{ object.id }}/update/">Edit</a>
+    <a class="p-2 btn btn-outline-primary" href="/heroes/{{ object.id }}/delete/">Delete</a>
 
-<form action="{% url 'heroes:hero_update' pk=hero.pk %}" method="POST">
-    {% csrf_token %}
-    {% render_form serializer %}
-    <input type="submit" value="Save">
-</form>
+</div>
+
+<div class="container">
+    <div class="row text-start">
+        <div class="col-lg-9 col-md-6 col-sm-12">
+            <div class="card mb-4 box-shadow">
+                <div class="card-body">
+                    <table class="table table-striped">
+                        <tr>
+                            <td class="w-25">Имя</td>
+                            <td>{{object.name}}</td>
+                        </tr>
+                        <tr>
+                            <td class="w-25">Фамилия</td>
+                            <td>{{object.surname}}</td>
+                        </tr>
+                        <tr>
+                            <td class="w-25">Дата рождения</td>
+                            <td>{{object.birth_date}}</td>
+                        </tr>
+                        <tr>
+                            <td class="w-25">Родители</td>
+                            <td>
+                                {% for parent in object.parents.all %}
+                                <a class="p-2 btn btn-outline-primary" href="#">{{ parent }} </a>
+                                </br>
+                                {% endfor %}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="w-25">Статусы</td>
+                            <td>
+                                {% for status in object.herostatus_set.all %}
+                                <a class="p-2 btn btn-outline-primary" href="#">{{ status }} </a>
+                                </br>
+                                {% endfor %}
+                            </td>
+                        </tr>
+
+                    </table>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
 
 {% endblock %}
