Hero status views done

--- a/heroes/templates/heroes/inc_confirm_delete.html
+++ b/heroes/templates/heroes/inc_confirm_delete.html
@@ -13,7 +13,7 @@
                         {% csrf_token %}
                         <p>Хотите удалить: "{{ object }}" ?</p>
                         <button type="submit" class="btn btn-danger">Подтвердить</button>
-                        <a href="/heroes/" class="btn btn-warning">Отмена</a>
+                        <a href="/" class="btn btn-warning">Отмена</a>
                     </form>
                 </div>
             </div>
