--- a/heroes/templates/heroes/inc_menu.html
+++ b/heroes/templates/heroes/inc_menu.html
@@ -3,6 +3,7 @@
     {% if user.is_authenticated %}
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/heroes/">Герои</a>
+        <a class="p-2 btn btn-outline-primary" href="/heroes_status/">Статусы героев</a>
         <a class="p-2 btn btn-outline-primary" href="#"> # </a>
     </nav>
 
