Parent and Parent status views done

--- a/heroes/templates/heroes/inc_menu.html
+++ b/heroes/templates/heroes/inc_menu.html
@@ -4,6 +4,8 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/heroes/">Герои</a>
         <a class="p-2 btn btn-outline-primary" href="/heroes_status/">Статусы героев</a>
+        <a class="p-2 btn btn-outline-primary" href="/parents/">Родители</a>
+        <a class="p-2 btn btn-outline-primary" href="/parents_status/">Статусы родителей</a>
         <a class="p-2 btn btn-outline-primary" href="#"> # </a>
     </nav>
 
