--- a/heroes/templates/heroes/parentstatus_detail.html
+++ b/heroes/templates/heroes/parentstatus_detail.html
@@ -18,7 +18,9 @@
                     <table class="table table-striped">
                         <tr>
                             <td class="w-25">Родитель</td>
-                            <td>{{object.parent}}</td>
+                            <td>
+                                <a class="p-2 btn btn-outline-primary" href="/parents/{{ object.parent.pk }}/">{{object.parent}} </a>
+                            </td>
                         </tr>
                         <tr>
                             <td class="w-25">Вид программы</td>
