--- a/heroes/templates/heroes/inc_main_menu.html
+++ b/heroes/templates/heroes/inc_main_menu.html
@@ -1,5 +1,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <a href="/"><h5 class="my-0 mr-md-auto font-weight-normal">Heroes CRM</h5></a>
+    <img src="/media/logo.png" width="70" height="70"/>
+
+    <nav class="ms-5">
+        <a href="/"><h5 class="my-0 mr-md-auto font-weight-normal">Heroes CRM</h5></a>
+    </nav>
 
     <nav class="ms-5">
 
