--- a/heroes/templates/heroes/inc_menu.html
+++ b/heroes/templates/heroes/inc_menu.html
@@ -6,7 +6,8 @@
         <a class="p-2 btn btn-outline-primary" href="/heroes_status/">Статусы героев</a>
         <a class="p-2 btn btn-outline-primary" href="/parents/">Родители</a>
         <a class="p-2 btn btn-outline-primary" href="/parents_status/">Статусы родителей</a>
-        <a class="p-2 btn btn-outline-primary" href="/cells/">Ячейки</a>
+        <a class="p-2 btn btn-outline-primary" href="/branches/">Отделения</a>
+        <a class="p-2 btn btn-outline-primary" href="/teams/">Отряды</a>
         <a class="p-2 btn btn-outline-primary" href="/trainings/">Тренировки</a>
         <a class="p-2 btn btn-outline-primary" href="/payment_types/">Абонементы</a>
         <a class="p-2 btn btn-outline-primary" href="/payments/">Платежи</a>
