templates bugs fixed

--- a/heroes/templates/heroes/parentstatus_detail.html
+++ b/heroes/templates/heroes/parentstatus_detail.html
@@ -42,8 +42,8 @@
                             <td>{{object.stop_at}}</td>
                         </tr>
                         <tr>
-                            <td class="w-25">Ячейка</td>
-                            <td>{{object.cell}}</td>
+                            <td class="w-25">Отделение</td>
+                            <td>{{object.branch}}</td>
                         </tr>
 
                     </table>
