--- a/heroes/templates/heroes/training_detail.html
+++ b/heroes/templates/heroes/training_detail.html
@@ -17,8 +17,8 @@
                 <div class="card-body">
                     <table class="table table-striped">
                         <tr>
-                            <td class="w-25">Ячейка</td>
-                            <td>{{object.cell}}</td>
+                            <td class="w-25">Отряд</td>
+                            <td>{{object.team}}</td>
                         </tr>
                         <tr>
                             <td class="w-25">Дата</td>
