--- a/heroes/templates/heroes/herostatus_detail.html
+++ b/heroes/templates/heroes/herostatus_detail.html
@@ -42,12 +42,12 @@
                             <td>{{object.stop_at}}</td>
                         </tr>
                         <tr>
-                            <td class="w-25">Ячейка</td>
-                            <td>{{object.cell}}</td>
+                            <td class="w-25">Отряд</td>
+                            <td>{{object.team}}</td>
                         </tr>
                         <tr>
                             <td class="w-25">Наставник</td>
-                            <td>{{object.mentor}}</td>
+                            <td>{{object.team.mentor}}</td>
                         </tr>
 
                     </table>
