--- a/heroes/templates/heroes/inc_main_menu.html
+++ b/heroes/templates/heroes/inc_main_menu.html
@@ -9,7 +9,7 @@
 
         {% if user.is_authenticated %}
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}"> Logout</a>
-            <a class="p-2 btn btn-outline-primary" href="{% url 'users:user-detail' %}"> Profile ({{ user.first_name }})</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:user-detail' %}"> Profile (@{{ user.first_name }})</a>
 
         {% else %}
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Login</a>
